Pull in some of the dance catalog scraping code and update to run in the context of the server.

--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -77,3 +77,8 @@
     }
 }
 
+<h3>Scraping</h3>
+<ul>
+    <li>@Html.ActionLink("Century", "ScrapeDances", new { id = "Century" })</li>
+    <li>@Html.ActionLink("DanceForum", "ScrapeDances", new { id = "danceforums" })</li>
+</ul>
