--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -27,6 +27,7 @@
     <li>@Html.ActionLink("Trace Warning", "SetTraceLevel", "Admin", new { level = 2 }, null)</li>
     <li>@Html.ActionLink("Trace Info", "SetTraceLevel", "Admin", new { level = 3 }, null)</li>
     <li>@Html.ActionLink("Trace Verbose", "SetTraceLevel", "Admin", new { level = 4 }, null)</li>
+    <li>@Html.ActionLink("Test Trace", "TestTrace", "Admin", new { message = "Nothing Special" }, null)</li>
 </ul>
 
 <hr />
