--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -74,7 +74,8 @@
         @Html.AntiForgeryToken();
         <input type="file" name="FileUpload" />
         <br />
-        <input type="submit" name="ReloadDatabase" id="Submit" value="Upload" />
+        <input type="submit" name="reloadDatabase" id="Submit" value="Reload" />
+        <input type="submit" name="reloadDatabase" id="Reload" value="Update" />
     }
 }
 
