--- a/DanceCalc/m4d/Views/Home/About.cshtml
+++ b/DanceCalc/m4d/Views/Home/About.cshtml
@@ -3,7 +3,7 @@
 }
 <div class="jumbotron">
     <h1>What is Music4Dance.Net?</h1>
-    <p class="lead">Note: Please feel free to explore this site, however it is currently in very early Alpha so any registration or data entered will be lost at the next upgrade.</p>
+    <p class="lead">I'm just starting to spin up this site, so please feel free to email feedback and suggestions to: <a href="mailto:support@music4dance.net">support@music4dance.net</a></p>
 </div>
 
 <div class="row">
@@ -18,25 +18,26 @@
         <h2>My first very small step</h2>
         <p>
             The problem is, my grand vision of how to solve this problem requires <i>a lot</i> of moving parts.  But after reading The Lean Startup I decided to use this as a way of trying to bite off small chucks
-            of a project to get a minimal usable product.  The result of this was a small windows phone 7 application that asks you to tap out the beat of a song that you're listening to and will show you
+            of a project to get a minimal viable product.  The result of this was a small windows phone 7 application that asks you to tap out the beat of a song that you're listening to and will show you
             which dances in its database it would work for.  This is based entirely on tempo and meter and has nothing to do with the style of the song.
         </p>
-        <p><a class="btn btn-default" href="http://www.windowsphone.com/en-us/store/app/dancecalc/b414c752-cc97-e011-986b-78e7d1fa76f8">See the app&raquo;</a></p>
+        <p><a class="btn btn-default" href="http://www.windowsphone.com/en-us/store/app/dancecalc/b414c752-cc97-e011-986b-78e7d1fa76f8">See the app&raquo;</a></p>        
     </div>
     <div class="col-md-3">
         <h2>But not many people own windows phones</h2>
         <p>
             Aside from the above being a very small part of the solution, the platform isn't a particularly good test case.  I chose it because I was interested in trying my hand at windows phone programming
-            not because I thought it was the best initial platform.  One of my next steps will be to get the basic functionality for that application working on this web site.
+            not because I thought it was the best initial platform for my circumstances at the time.  <p>More recently I pulled most of the functionality from that application to make it available on the site.</p>
         </p>
+        <p><a class="btn btn-default" href="/Home/Counter">Use the counter&raquo;</a></p>
     </div>
     <div class="col-md-3">
         <h2>Besides, what I really want to do</h2>
         <p>
             Is to be able to generate a playlist of songs to dance a slow salsa or fast West Coast Swing or a Viennese Waltz to.  I'd like to do this against my own library or against one of
             a multitude of streaming and mp3 purchase services.  The first baby step for that is the songs section of this website, where I've pulled together a bunch of that information
-            from a number of different sources, merged and edited, so that I've got at least a start of a database of song title/artist/albums associated with various dances.  In the long run I would like this
-            to be both crowd sourced and linked to actual music, but for now enjoy the browsing.
+            from a number of different sources, merged and edited, so that I've got at least a start of a database of song title/artist/albums associated with various dances and provided deep links to Xbox Music, ITunes and Amazon where I could.  In the long run I would like this
+            to be crowd sourced both with new content and ratings, but for now enjoy the browsing and please use the links when buying music that you've discovered here, as that will help fund improvements.
         </p>
         <p><a class="btn btn-default" href="/Song">Browse the Song Database&raquo;</a></p>
     </div>
