Fix a couple of bugs related to the GUID conversion and add in the initial weight badge for 'goodness'

--- a/DanceCalc/m4d/Views/Song/Index.cshtml
+++ b/DanceCalc/m4d/Views/Song/Index.cshtml
@@ -184,7 +184,8 @@
                             {
                                 @separator;
                                 @Html.DisplayFor(m => ditem.Dance.Info.Name)
-                                          separator = ", ";
+                                <span class="badge">@ditem.Weight</span>
+                                separator = ", ";
                             }
                         </td>
 
