Enable user status and log-off once logged in

--- a/DanceCalc/m4d/Views/Shared/_Layout.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_Layout.cshtml
@@ -32,7 +32,10 @@
                         <li>@Html.ActionLink("Admin", "Index", "Admin")</li>
                     }
                 </ul>
-                @*@Html.Partial("_LoginPartial")*@
+                @if (User.Identity != null)
+                {
+                    @Html.Partial("_LoginPartial")
+                }
             </div>
         </div>
     </div>
