--- a/DanceCalc/m4d/Views/Shared/_Layout.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                         <li>@Html.ActionLink("Admin", "Index", "Admin")</li>
                     }
                 </ul>
-                @if (User.Identity != null)
+                @if (User.Identity != null && User.Identity.IsAuthenticated)
                 {
                     @Html.Partial("_LoginPartial")
                 }
