--- a/DanceCalc/m4d/Views/Home/About.cshtml
+++ b/DanceCalc/m4d/Views/Home/About.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<div class="jumbotron">
+<div class="jumbotron" align="center">
+    <img src="~/Content/BlackBanner.png" title="music4dance" class="banner" />
     <h1>What is Music4Dance.Net?</h1>
     <p class="lead">I'm just starting to spin up this site, so please feel free to email feedback and suggestions to: <a href="mailto:support@music4dance.net">support@music4dance.net</a></p>
 </div>
