Dancing with the stars scraper and data

--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -83,4 +83,5 @@
 <ul>
     <li>@Html.ActionLink("Century", "ScrapeDances", new { id = "Century" })</li>
     <li>@Html.ActionLink("DanceForum", "ScrapeDances", new { id = "danceforums" })</li>
+    <li>@Html.ActionLink("DWTS", "ScrapeDances", new { id = "dwts" })</li>
 </ul>
