Add in terms of service and privace policy

--- a/DanceCalc/m4d/Views/Shared/_Layout.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_Layout.cshtml
@@ -47,7 +47,10 @@
             <hr />
             <div class="col-md-12">
                 <footer>
-                    <p>&copy; @DateTime.Now.Year - Music4Dance.net</p>
+                    <p>&copy; @DateTime.Now.Year - Music4Dance.net - 
+                    @Html.ActionLink("Terms of Service","TermsOfService") - 
+                    @Html.ActionLink("Privacy Policy", "PrivacyPolicy")
+                    </p>
                 </footer>
             </div>
         </div>
