--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -5,6 +5,11 @@
 
 <h2>Administrator Console</h2>
 
+<h3>Users</h3>
+<ul>
+    <li>@Html.ActionLink("List Users", "Index", "ApplicationUsers")</li>
+</ul>
+
 <h3>Logging</h3>
 <ul>
     <li>@Html.ActionLink("Log", "Index", "Log")</li>
