User Backup/Restore first pass.  Need to make sure it works between machines and then probably trim down the pre-defined acounts even more.

--- a/DanceCalc/m4d/Views/ApplicationUsers/Details.cshtml
+++ b/DanceCalc/m4d/Views/ApplicationUsers/Details.cshtml
@@ -24,17 +24,7 @@
         </dt>
 
         <dd>
-            @{
-                string separator = string.Empty;
-                foreach (var idRole in Model.Roles)
-                {
-                    Microsoft.AspNet.Identity.EntityFramework.IdentityRole role = roles[idRole.RoleId];
-                    string output = separator + role.Name;
-                    separator = ", ";
-                    <text>@output</text>
-                }
-
-            }
+            @Model.GetRoles(roles)
         </dd>
 
         <dt>
