--- a/DanceCalc/m4d/Views/Shared/_Layout.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
                     <li>@Html.ActionLink("Dances", "Index", "Home")</li>
                     <li>@Html.ActionLink("Songs", "Index", "Song")</li>
                     <li>@Html.ActionLink("Counter", "Counter", "Home")</li>
+                    <li><a href="http://blog.music4dance.net">Blog</a></li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     @*<li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
                     @if (User.IsInRole("showDiagnostics"))
