Permalink the dances page (since I'm going to be referring to it in the blog and I might change the home page)

--- a/DanceCalc/m4d/Views/Shared/_Layout.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Dances", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Dances", "Dances", "Home")</li>
                     <li>@Html.ActionLink("Songs", "Index", "Song")</li>
                     <li>@Html.ActionLink("Counter", "Counter", "Home")</li>
                     <li><a href="http://blog.music4dance.net">Blog</a></li>
