Add tempoes to dance names in counter list

--- a/DanceCalc/m4d/Views/_ViewStart.cshtml
+++ b/DanceCalc/m4d/Views/_ViewStart.cshtml
@@ -2,7 +2,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
     if (HttpContext.Current.IsDebuggingEnabled)
     {
-        Page.ScriptQualifier = "";
+        // TODO: Figure out how to autoincrement
+        Page.ScriptQualifier = "?1";
     }
     else
     {
