Show Tempo range for dances in counter control

--- a/DanceCalc/m4d/Content/Site.css
+++ b/DanceCalc/m4d/Content/Site.css
@@ -114,7 +114,11 @@ table.songlist
     width:100%;
 }
 
-.row-buffer { margin-top:15px; }
+.row-buffer {
+    margin-top:15px; 
+    padding-left:10px;
+    padding-right:10px;
+}
 
 .btn-ml,
 .btn-group-ml > .btn {
