Add counter into dance create and edit pages and wire everything up
Still should default to 3/4 for something identified as a waltz, figure out a way to get easily readable BPM for each dance in edit mode

--- a/DanceCalc/m4d/Views/Home/Counter.cshtml
+++ b/DanceCalc/m4d/Views/Home/Counter.cshtml
@@ -8,6 +8,7 @@
     @{
         string pageScript = "~/Scripts/counter.js" + Page.ScriptQualifier;
     }
+    <script>var numerator = 4;</script>
     @Scripts.Render("~/bundles/jqueryval")
     <script src="@Url.Content(pageScript)" type="text/javascript"></script>
 }
