--- a/DanceCalc/m4d/Views/Home/CounterHelp.cshtml
+++ b/DanceCalc/m4d/Views/Home/CounterHelp.cshtml
@@ -2,7 +2,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<h1>Dance Counter Help</h1>
 <p>Choose BPM, 2/4, 3/4 or 4/4 meter</p>
-<p>Click the Count button once per beat for BPM or once per measure for the metered timings</p>
-<p>Or type in a tempo to the left of the meter dropdown.</p>
-<p>See which partner dances can be danced to the tempo/meter that you've chosen.</p>
+<p>Click the Count button once per beat for BPM or once per measure for the metered timings.  Or type in a tempo to the left of the meter dropdown.</p>
+<p>See which partner dances can be danced to that tempo.</p>
+<p><small>Note: The new implementation will show all dances that can be danced at a particular tempo for BPM and shows both 2/4 and 4/4 dances when either is selected.</small></p>
