--- a/DanceCalc/m4d/Views/Shared/_Counter.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_Counter.cshtml
@@ -2,17 +2,9 @@
     <button id='count' type=button class="btn btn-lg btn-primary btn-block">Count</button>
 </div>
 <div class="row row-buffer">
-    <input id="tempo" class="calculator col-xs-4" value="0.0" />
+    <input id="MPM" class="calculator col-xs-4" value="0.0" />
     <div class="btn-group col-xs-4">
-        <button type="button" id="mt" class="btn btn-info dropdown-toggle" data-toggle="dropdown">
-            4/4 MPM <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu" role="menu">
-            <li><a id="mt1" href="#">BPM</a></li>
-            <li><a id="mt2" href="#">2/4 MPM</a></li>
-            <li><a id="mt3" href="#">3/4 MPM</a></li>
-            <li><a id="mt4" href="#">4/4 MPM</a></li>
-        </ul>
+        @Html.Partial("_MeterChooser")
     </div>
     @Html.ActionLink("Help", "CounterHelp", null, new { @class = "btn btn-default col-xs-4", role = "button" })
 </div>
@@ -32,6 +24,9 @@
     <div id="dances" class="list-group"></div>
 </div>
 
+<div class="row row-buffer">
+    <input id="Tempo" size="5" value="0.0" /> BPM
+</div>
 
 <div class="row row-buffer">
     <button id='reset' type=button class="btn-sm btn-block">Reset</button>
