--- a/DanceCalc/m4d/Views/Song/EditCore.cshtml
+++ b/DanceCalc/m4d/Views/Song/EditCore.cshtml
@@ -49,21 +49,6 @@
     <!-- Album stuff goes here-->
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Tempo, new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Tempo)
-            @Html.ValidationMessageFor(model => model.Tempo)
-
-            @if (old != null && old.Tempo != null)
-            {
-                <div class="editor-alternate">
-                    @old.Tempo.Value
-                </div>
-            }
-            </div>
-    </div>
-
-    <div class="form-group">
         @Html.LabelFor(model => model.Length, new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.Length)
@@ -92,7 +77,30 @@
             }
             </div>
     </div>
-    
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Tempo, new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Tempo)
+            @Html.ValidationMessageFor(model => model.Tempo)
+
+            @if (old != null && old.Tempo != null)
+            {
+                <div class="editor-alternate">
+                    @old.Tempo.Value
+                </div>
+            }
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+            <button id='count' type=button class="btn btn-lg btn-primary btn-block">Count</button>
+            <div>@Html.Partial("_MeterChooser")</div>
+            <div id="dances" class="list-group"></div>
+        </div>
+        <div class="col-md-2"></div>
+    </div>
     <hr />
     <div class="display-label">
         Dance(s):
@@ -100,32 +108,32 @@
     <div class="display-field">
         @{ var separator = ""; }
         @if (Model.DanceRatings != null)
+    {
+        foreach (var item in Model.DanceRatings)
         {
-            foreach (var item in Model.DanceRatings)
+            @separator;
+            @Html.DisplayFor(model => item.Dance.Info.Name)
+            if (item.Weight > 1)
             {
-                @separator;
-                @Html.DisplayFor(model => item.Dance.Info.Name)
-                if (item.Weight > 1)
-                {
-                    <b>(@item.Weight)</b>
-                }
-                separator = ", ";
+                <b>(@item.Weight)</b>
             }
-            <br/>
+            separator = ", ";
         }
+        <br />
+    }
     </div>
 
     if (ViewData.ContainsKey("DanceListRemove"))
-    { 
-        <div class="editor-label">
-            Remove Dances from this list to vote them down.
-        </div>
-        <div class="editor-field">
-            @Html.ListBox("remDances", ViewBag.DanceListRemove as MultiSelectList, new { @class = "chzn-select", data_placeholder = "Remove Dances to Vote Down..." })
-        </div>
+    {
+    <div class="editor-label">
+        Remove Dances from this list to vote them down.
+    </div>
+    <div class="editor-field">
+        @Html.ListBox("remDances", ViewBag.DanceListRemove as MultiSelectList, new { @class = "chzn-select", data_placeholder = "Remove Dances to Vote Down..." })
+    </div>
     }
     if (ViewData.ContainsKey("DanceListAdd"))
-    { 
+    {
     <div class="editor-label">
         Add dances to this list to vote them up.
     </div>
@@ -139,55 +147,17 @@
     <table>
         <tr><td class="album-header">Album</td><td class="track-header">Track</td><td class="publisher-header">Label</td><td class="delete-header"></td></tr>
         @{
-            int currentAlbum = 0;
-            int maxAlbum = 5;
-            if (Model.HasAlbums)
-            {
-                maxAlbum = Model.Albums.Count + 5;
-                for (; currentAlbum < Model.Albums.Count; currentAlbum++)
-                {
-                    string albumId = "Album_" + currentAlbum.ToString();
-                    string deleteId = "Delete_" + currentAlbum.ToString();
-                    //string purchase = Model.Albums[currentAlbum].SerializePurchaseInfo();
-                    <tr id="@albumId">
-                        <td>
-                            <div class="editor-field">
-                                @Html.TextBoxFor(model => model.Albums[currentAlbum].Name)
-                                @Html.ValidationMessageFor(model => model.Albums[currentAlbum].Name)
-                            </div>
-                        </td>
-                        <td>
-                            <div class="editor-field">
-                                @Html.TextBoxFor(model => model.Albums[currentAlbum].Track)
-                                @Html.ValidationMessageFor(model => model.Albums[currentAlbum].Track)
-                            </div>
-                        </td>
-                        <td>
-                            <div class="editor-field">
-                                @Html.TextBoxFor(model => model.Albums[currentAlbum].Publisher)
-                                @Html.ValidationMessageFor(model => model.Albums[currentAlbum].Publisher)
-                            </div>
-                        </td>
-                        <td>
-                            <button type="button" id="@deleteId">X</button>
-                            @Html.HiddenFor(model => Model.Albums[currentAlbum].PurchaseInfo)
-                            @Html.HiddenFor(model => Model.Albums[currentAlbum].Index)
-                        </td>
-                    </tr>
-                }
-            }
-            else
-            {
-                Model.Albums = new List<m4dModels.AlbumDetails>();
-            }
-
-            int albumIdx = Model.GetNextAlbumIndex();
-
-            for (; currentAlbum < maxAlbum; currentAlbum += 1)
+        int currentAlbum = 0;
+        int maxAlbum = 5;
+        if (Model.HasAlbums)
+        {
+            maxAlbum = Model.Albums.Count + 5;
+            for (; currentAlbum < Model.Albums.Count; currentAlbum++)
             {
                 string albumId = "Album_" + currentAlbum.ToString();
-                Model.Albums.Add(new m4dModels.AlbumDetails { Index = albumIdx++ });
-                <tr id="@albumId" hidden>
+                string deleteId = "Delete_" + currentAlbum.ToString();
+                //string purchase = Model.Albums[currentAlbum].SerializePurchaseInfo();
+                <tr id="@albumId">
                     <td>
                         <div class="editor-field">
                             @Html.TextBoxFor(model => model.Albums[currentAlbum].Name)
@@ -207,17 +177,55 @@
                         </div>
                     </td>
                     <td>
+                        <button type="button" id="@deleteId">X</button>
+                        @Html.HiddenFor(model => Model.Albums[currentAlbum].PurchaseInfo)
                         @Html.HiddenFor(model => Model.Albums[currentAlbum].Index)
                     </td>
                 </tr>
             }
+        }
+        else
+        {
+            Model.Albums = new List<m4dModels.AlbumDetails>();
+        }
 
-            <tr>
-                <td colspan="3"><button type="button" id="AddAlbum">New Album</button></td>
+        int albumIdx = Model.GetNextAlbumIndex();
+
+        for (; currentAlbum < maxAlbum; currentAlbum += 1)
+        {
+            string albumId = "Album_" + currentAlbum.ToString();
+            Model.Albums.Add(new m4dModels.AlbumDetails { Index = albumIdx++ });
+            <tr id="@albumId" hidden>
+                <td>
+                    <div class="editor-field">
+                        @Html.TextBoxFor(model => model.Albums[currentAlbum].Name)
+                        @Html.ValidationMessageFor(model => model.Albums[currentAlbum].Name)
+                    </div>
+                </td>
+                <td>
+                    <div class="editor-field">
+                        @Html.TextBoxFor(model => model.Albums[currentAlbum].Track)
+                        @Html.ValidationMessageFor(model => model.Albums[currentAlbum].Track)
+                    </div>
+                </td>
+                <td>
+                    <div class="editor-field">
+                        @Html.TextBoxFor(model => model.Albums[currentAlbum].Publisher)
+                        @Html.ValidationMessageFor(model => model.Albums[currentAlbum].Publisher)
+                    </div>
+                </td>
+                <td>
+                    @Html.HiddenFor(model => Model.Albums[currentAlbum].Index)
+                </td>
             </tr>
         }
+
+        <tr>
+            <td colspan="3"><button type="button" id="AddAlbum">New Album</button></td>
+        </tr>
+        }
     </table>
-    
+
     <hr />
     <div class="display-label">
         @Html.DisplayNameFor(model => model.Created):
@@ -234,12 +242,12 @@
     <div class="display-field">
         @Html.DisplayFor(model => model.Modified)
     </div>
-    
+
     <hr />
-            
+
     <p>
         <input type="hidden" name="filter" value="@ViewBag.SongFilter" />
         <input type="submit" value="@ViewBag.Submit" class="btn btn-default" />
-    </p>    
-}
+    </p>
+    }
 
