--- a/DanceCalc/m4d/Views/Song/Edit.cshtml
+++ b/DanceCalc/m4d/Views/Song/Edit.cshtml
@@ -18,9 +18,15 @@
     @{
         string pageScript = "~/Scripts/edit.js" + Page.ScriptQualifier;
         string counterScript = "~/Scripts/counter.js" + Page.ScriptQualifier;
+        if (ViewData.ContainsKey("paramNumerator"))
+        {
+            <script>var paramNumerator = @ViewBag.paramNumerator;</script>
+        }
     }
-
-    <script>var numerator = 4;</script>
+    <script>
+        var paramShowMPM = true;
+        var paramShowBPM = true;
+    </script>
 
     @Scripts.Render("~/bundles/jqueryval")
     <script src="@Url.Content("~/Scripts/chosen.jquery.js")" type="text/javascript"></script>
