Get a minimal range control for counter tolerance to make it easier to find dances.  Also allow override of default tolerance and use a wider range for the editor version.
Definitely need to do some beautification if/when we expose this to the public.

--- a/DanceCalc/m4d/Views/Shared/_Counter.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_Counter.cshtml
@@ -24,6 +24,13 @@
     <div id="dances" class="list-group"></div>
 </div>
 
+@if (ViewBag.ShowEpsilon == true)
+{
+    <div class="row row-buffer">
+        <input id='epsilon' type='range' value='5' min='1' max='50'/>
+    </div>
+}
+
 <div class="row row-buffer">
     <input id="Tempo" size="5" value="0.0" /> BPM
 </div>
