--- a/DanceCalc/m4d/Views/Song/Create.cshtml
+++ b/DanceCalc/m4d/Views/Song/Create.cshtml
@@ -26,6 +26,7 @@
     <script>
         var paramShowMPM = true;
         var paramShowBPM = true;
+        var paramEpsVisible = 0.1;
     </script>
     @Scripts.Render("~/bundles/jqueryval")
     <script src="@Url.Content("~/Scripts/chosen.jquery.js")" type="text/javascript"></script>
