--- a/DanceCalc/m4d/Views/Song/EditCore.cshtml
+++ b/DanceCalc/m4d/Views/Song/EditCore.cshtml
@@ -98,6 +98,7 @@
             <button id='count' type=button class="btn btn-lg btn-primary btn-block">Count</button>
             <div>@Html.Partial("_MeterChooser")</div>
             <div id="dances" class="list-group"></div>
+            <input id='epsilon' type='range' value='5' min='1' max='50' />
         </div>
         <div class="col-md-2"></div>
     </div>
