Massive performance improvement for batch loading of songs

--- a/DanceCalc/m4d/Views/ApplicationUsers/Index.cshtml
+++ b/DanceCalc/m4d/Views/ApplicationUsers/Index.cshtml
@@ -100,7 +100,8 @@
             @item.GetRoles(roles)
         </td>
     <td>
-        @Html.ActionLink("ChangeRoles", "ChangeRoles", new { id = item.Id })
+        @Html.ActionLink("Change Roles", "ChangeRoles", new { id = item.Id }),
+        @Html.ActionLink("List Songs", "FilterUser", "Song", new { user = item.UserName }, null)
 @*
     @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
     @Html.ActionLink("Details", "Details", new { id=item.Id }) |
