Add in toggle for inline dance counter control

--- a/DanceCalc/m4d/Views/Song/EditCore.cshtml
+++ b/DanceCalc/m4d/Views/Song/EditCore.cshtml
@@ -90,9 +90,10 @@
                     @old.Tempo.Value
                 </div>
             }
+            <a href="#" id="toggle-count" class="btn btn-sm btn-default"><span id="toggle-count-display" class="glyphicon glyphicon-arrow-down"></span></a>
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group" id="counter-control">
         <div class="col-md-2"></div>
         <div class="col-md-8">
             <button id='count' type=button class="btn btn-lg btn-primary btn-block">Count</button>
