Initial knockout.js integration with new/edit page Doesn't do anything yet, but pulls the xbox/itunes/amazon listings down into a list on the page.

--- a/DanceCalc/m4d/Views/Song/Edit.cshtml
+++ b/DanceCalc/m4d/Views/Song/Edit.cshtml
@@ -27,11 +27,14 @@
         var paramShowMPM = true;
         var paramShowBPM = true;
         var paramEpsVisible = 0.1;
+        var songId = "@Model.SongId.ToString()";
     </script>
 
     @Scripts.Render("~/bundles/jqueryval")
     <script src="@Url.Content("~/Scripts/chosen.jquery.js")" type="text/javascript"></script>
     <link href="@Url.Content("~/Content/chosen.css")" rel="stylesheet" type="text/css" />
+    <script src="@Url.Content("~/Scripts/knockout-3.1.0.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/knockout.mapping-latest.js")" type="text/javascript"></script>
     <script>
         $(".chzn-select").chosen({ width: "500px" });
         var albumCount = @Model.Albums.Count-5;
