--- a/DanceCalc/m4d/Views/Song/EditCore.cshtml
+++ b/DanceCalc/m4d/Views/Song/EditCore.cshtml
@@ -227,7 +227,36 @@
         </tr>
         }
     </table>
+    <hr />
+    <a id="load-xbox" href="#" class="btn btn-small btn-default" role="button">Xbox</a>
+    <a id="load-itunes" href="#" class="btn btn-small btn-default" role="button">ITunes</a>
+    <a id="load-amazon" href="#" class="btn btn-small btn-default" role="button">Amazon</a>
+    <a id="load-all" href="#" class="btn btn-small btn-default" role="button">All</a>
 
+    <table id="service-results" class="table table-striped">
+        <thead>
+            <tr>
+                <th></th>
+                <th></th>
+                <th>Name</th>
+                <th>Album</th>
+                <th>Artist</th>
+                <th>#</th>
+                <th>Length</th>
+            </tr>
+        </thead>
+        <tbody data-bind="foreach: tracks">
+            <tr>
+                <td><a data-bind="attr: {href: Link}" class="btn" role="button"><img width="30" height="30" data-bind="attr: {src: serviceLogo}" /></a></td>
+                <td><img width="30" height="30" data-bind="attr: {src: ImageUrl}" /></td>
+                <td data-bind="text: Name"></td>
+                <td data-bind="text: Album"></td>
+                <td data-bind="text: Artist"></td>
+                <td data-bind="text: TrackNumber"></td>
+                <td data-bind="text: durationFormatted"></td>
+            </tr>
+        </tbody>
+    </table>
     <hr />
     <div class="display-label">
         @Html.DisplayNameFor(model => model.Created):
