--- a/DanceCalc/m4d/Views/Song/MusicServiceSearch.cshtml
+++ b/DanceCalc/m4d/Views/Song/MusicServiceSearch.cshtml
@@ -77,4 +77,4 @@
     @Html.ActionLink("Back to List", (string)ViewBag.SongFilter.Action, new { filter = ViewBag.SongFilter }, new { @class = "btn btn-small btn-primary", role = "button" })
 </p>
 
-@Html.AntiForgeryToken()
+<!--script>var myViewModel=@Model.Tracks.ToString()-->
