Get display and edit templates + custom binding all working for duration of song.

--- a/DanceCalc/m4d/Views/Song/DetailsCore.cshtml
+++ b/DanceCalc/m4d/Views/Song/DetailsCore.cshtml
@@ -62,7 +62,7 @@
                 @Html.DisplayNameFor(model => model.Length):
             </div>
             <div class="display-field">
-                @length
+                @Html.DisplayFor(model => model.Length,"SongDuration")
             </div>
             <br />
         }
